# VoxType

./: .gitignore  AGENTS.md  CHANGELOG.md  README.en.md  README.md  agents.md  build_exe.ps1  config.example.json  config.example.toml  main.py  package-lock.json  package.json  requirements.txt  run.ps1  vite.config.js  voice_input.spec  参考文档.md
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: code-style.md  directory-structure.md
docs/plans/: 2026-04-27-release-0.1.32-optimization-design.md
docs/wiki/: Setup-Guide.md
scripts/: ai-check.ps1  ai-release-check.ps1  enable_git_hooks.ps1  scan-secrets.mjs  scan_secrets.py
src/: app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: 32x32.rgba  icon.icns
src-tauri/src/: app_log.rs  asr.rs  asr_ws.rs  audio.rs  autostart.rs  config.rs  config_validation.rs  error.rs  hotkey.rs  hotword_generator.rs  hotword_history.rs  lib.rs  llm_post_edit.rs  main.rs  main_window.rs  overlay.rs  protocol.rs  session.rs  setup_guide.rs  stats.rs  system_audio.rs  text_output.rs  tray.rs  update.rs
src/lib/app/: VoxTypeController.svelte.ts  autoHotwordsController.svelte.ts  defaults.ts  diagnosticsController.svelte.ts  hotkeyCaptureController.svelte.ts  overlayController.svelte.ts  settingsNavigationController.svelte.ts  updateController.svelte.ts  windowController.svelte.ts
src/lib/components/app/: AppContent.svelte  AppGlobalStyles.svelte  AppShell.svelte  VoxTypeApp.svelte
src/lib/components/common/: ActionNotice.svelte  AdvancedPanel.svelte  CloseToTrayDialog.svelte  SettingTags.svelte
src/lib/components/overlay/: OverlayWindow.svelte  StartupToast.svelte
src/lib/components/overview/: SetupStatusCard.svelte
src/lib/components/pages/: ApiConfigSection.svelte  HistorySection.svelte  HomeSection.svelte  HotwordsSection.svelte  OptionsSection.svelte
src/lib/components/settings/: SettingsToolbar.svelte
src/lib/i18n/: en.ts  errorCodes.ts  index.ts  types.ts  zh-CN.ts  zh-TW.ts
src/lib/types/: app.ts
src/lib/utils/: appRouting.ts  audioMeter.ts  autoHotwords.ts  config.ts  errorActions.ts  frontendDiagnostics.ts  hotkeys.ts  hotwords.ts  overlayAppearance.ts  overlayLayout.ts  sessionState.ts  settingsFields.ts  setupStatus.ts  stats.ts  userFacingErrors.ts
src/routes/: +page.svelte
voice_input/: __init__.py  app.py  asr_client.py  audio_capture.py  config.py  input_hooks.py  llm_post_edit.py  overlay.py  protocol.py  stats.py  system_audio.py  text_output.py
